added descriptions to image hovers

--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
           <div class="site-heading">
             <h1>Brunswick Hideaway</h1>
             <span class="subheading">Guest house with private garden</span>
+            <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
       </div>
     </div>
   </header>
-
-
 
   <!-- About -->
   <section class="page-section" id="about">
@@ -92,6 +91,25 @@
           <p class="text-muted mt-2">
             Recently renovated, the lounge room has full length windows looking out to the private garden, beautiful timber floors and a stocked up bookshelf. The bedroom has wool carpet, a large built-in wardrobe and quality linen. The bathroom and kitchenette were fully renovated in 2019. While we are close to Grantham Street shops and tram line, and have very quick and easy access to the airport, we are in a really quiet spot.
           </p>
+        </div>
+
+        <div class="col-lg-8 mx-auto text-center">
+          <h4>Everyone is welcome</h4>
+            <p class="large text-muted">
+              Couples visiting adult children or grand children
+            </p>
+            <p class="large text-muted">
+              People working at the hospital precinct
+            </p>
+            <p class="large text-muted">
+              People working or wanting access to St Kilda Rd business district
+            </p>
+            <p class="large text-muted">
+              Holiday makers and tourists looking for easy access to the racecourse, tennis centre or other sporting venues
+            </p>
+            <p class="large text-muted">
+              People visiting to see live theatre
+            </p>
         </div>
       </div>
     </div>
@@ -135,7 +153,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <p>Courtyard dog</p>
+                <p>Our dog was made by Alice Springs Aboriginal sculptor Dan Murphy.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/gallery/courtyard_dog.jpg" alt="">
@@ -157,7 +175,9 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <p>Garden</p>
+                <div class="project-name">
+                  <p>Wisteria and clivias (sadly not all year round)</p>
+                </div>
               </div>
             </div>
             <img class="img-fluid" src="img/gallery/garden.jpg" alt="">
@@ -168,7 +188,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <p>Living room 2</p>
+                <p>Welcome to your hideaway</p>
               </div>
             </div>
             <img class="img-fluid" src="img/gallery/living_room_2.jpg" alt="">
@@ -179,7 +199,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <p>Bedroom</p>
+                <p>Queen sized bed, new linen, big wardrobe, extra blankets and pillows</p>
               </div>
             </div>
             <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="">
@@ -190,7 +210,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <p>Bathroom</p>
+                <p>Brand new bathroom complete with an elephant with his trunk up!</p>
               </div>
             </div>
             <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="">
@@ -201,7 +221,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <p>Library</p>
+                <p>Too many books: we know!</p>
               </div>
             </div>
             <img class="img-fluid" src="img/gallery/library.jpg" alt="">
@@ -230,15 +250,17 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Brunswick</h4>
+          <p class="text-muted">
+            Brunswick is a multicultural suburb 4km from the city centre. It has a vast array of restaurants ranging from vegan to middle-eastern, lots of artist run galleries, hip cafes, live music, even an African jazz bar. Our house has really quick and easy access to Tullamarine Freeway with the advantage of no freeway noise.
+          </p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Responsive Design</h4>
+          <h4 class="service-heading">Transport</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
         </div>
         <div class="col-md-4">
