added map and removed host images

--- a/index.html
+++ b/index.html
@@ -245,6 +245,13 @@
       </div>
 
       <div class="row text-center">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1iFBY_cThrsEDVwRKx-rD-OIfHCt2sV-1"
+                height="500"
+                width="100%"
+                style="border:none;"></iframe>
+      </div>
+
+      <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -284,35 +291,8 @@
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/hosts/Greta.png" alt="">
-            <h4>Greta</h4>
-            <p class="text-muted">Education</p>
-          </div>
-        </div>
-
-        <div class="col-sm-6">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/hosts/Tony.jpg" alt="">
-            <h4>Tony</h4>
-            <p class="text-muted">Health</p>
-          </div>
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">
-            Greta and Tony are friendly and helpful but not intrusive. They are more than happy to help you out and have a chat, or leave you to relax and enjoy the space in private.
-          </p>
-        </div>
-      </div>
 
       <div class="col-lg-8 mx-auto text-center">
-
-        <h4>Interaction with guests</h4>
 
         <p class="large text-muted">
           Greta and Tony live at the property. We are around weeknights, weekends and in the evenings to provide directions or advice on places to go and things to do. Once we have introduced ourselves we will just get on with our lives. We are more than happy to help you out and have a chat, or leave you to relax and enjoy the space in private.
