--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+
+  <!-- Pro fontawaesome -->
+
+  <script src="https://kit.fontawesome.com/af4050200f.js"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -22,6 +27,8 @@
 
   <!-- Custom styles for this template -->
   <link href="css/agency.css" rel="stylesheet">
+
+
 
 </head>
 
@@ -79,7 +86,6 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
       <div>
@@ -91,25 +97,138 @@
           <p class="text-muted mt-2">
             Recently renovated, the lounge room has full length windows looking out to the private garden, beautiful timber floors and a stocked up bookshelf. The bedroom has wool carpet, a large built-in wardrobe and quality linen. The bathroom and kitchenette were fully renovated in 2019. While we are close to Grantham Street shops and tram line, and have very quick and easy access to the airport, we are in a really quiet spot.
           </p>
+
+        <!-- Everyone welcome -->
+        <div>
+          <h4>Everyone is welcome</h4>
+            <ul>
+              <li class="large text-muted">Couples visiting adult children or grand children</li>
+              <li class="large text-muted">People working at the hospital precinct</li>
+              <li class="large text-muted">People working or wanting access to St Kilda Rd business district</li>
+              <li class="large text-muted">Holiday makers and tourists looking for easy access to the racecourse, tennis centre or other sporting venues</li>
+              <li class="large text-muted">People visiting to see live theatre</li>
+            </ul>
+        </div>
         </div>
 
-        <div class="col-lg-8 mx-auto text-center">
-          <h4>Everyone is welcome</h4>
-            <p class="large text-muted">
-              Couples visiting adult children or grand children
-            </p>
-            <p class="large text-muted">
-              People working at the hospital precinct
-            </p>
-            <p class="large text-muted">
-              People working or wanting access to St Kilda Rd business district
-            </p>
-            <p class="large text-muted">
-              Holiday makers and tourists looking for easy access to the racecourse, tennis centre or other sporting venues
-            </p>
-            <p class="large text-muted">
-              People visiting to see live theatre
-            </p>
+        <!-- Buttons -->
+        <div class="row text-center mt-5 mb-5">
+          <div class="col-md-2 col-sm-4 col-xs-6">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-user-friends fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted">2 guests</p>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-couch fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">Living room</p>
+            <p class="text-muted m-0">3.6m x 4m</p>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-bed fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">1 Bedroom (1 Queen)</p>
+            <p class="text-muted m-0">2.7 x 4.1m</p>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-hat-chef fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">Kitchenette</p>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-leaf fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">Private garden</p>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-toilet fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">1 Bathroom</p>
+          </div>
+        </div>
+
+
+        <!-- Information row 1-->
+        <div class="d-flex justify-content-between">
+          <div style="width: 30%;">
+            <h4>Amenities</h4>
+            <ul>
+              <li class="large text-muted p-0">Heating and cooling</li>
+              <li class="large text-muted">TV</li>
+              <li class="large text-muted">Internet</li>
+              <li class="large text-muted">Hangers</li>
+              <li class="large text-muted">Hair dryer</li>
+              <li class="large text-muted">Towels, sheets, extra blankets, pillow selection</li>
+              <li class="large text-muted">Bathroom products</li>
+              <li class="large text-muted">Smoke detector</li>
+              <li class="large text-muted">Free street parking</li>
+            </ul>
+          </div>
+
+          <div style="width: 30%;">
+            <h4>Available for loan</h4>
+            <ul>
+              <li class="large text-muted">Picnic gear</li>
+              <li class="large text-muted">Umbrella</li>
+              <li class="large text-muted">Raincoat</li>
+              <li class="large text-muted">Shopping bags</li>
+              <li class="large text-muted">Anything else, just ask</li>
+            </ul>
+          </div>
+
+          <div style="width: 30%;">
+            <h4>Kitchen</h4>
+            <ul>
+              <li class="large text-muted">Microwave, toaster, kettle</li>
+              <li class="large text-muted">Basic cooking gear</li>
+              <li class="large text-muted">Cutlery, crockery, glasses</li>
+              <li class="large text-muted">Refrigerator</li>
+              <li class="large text-muted">Outdoor barbeque</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+        <!-- Information row 2-->
+        <div class="d-flex justify-content-between">
+          <div style="width: 30%;">
+            <h4>Guest access</h4>
+            <ul>
+              <li class="large text-muted">Greta and Tony will greet you if available</li>
+              <li class="large text-muted">24 hour access with lock safe</li>
+              <li class="large text-muted">Step free access</li>
+            </ul>
+          </div>
+
+          <div style="width: 30%;">
+            <h4>Safety features</h4>
+            <ul>
+              <li class="large text-muted">No steps or stairs</li>
+              <li class="large text-muted">Fire extinguisher</li>
+              <li class="large text-muted">Smoke detector</li>
+            </ul>
+          </div>
+
+          <div style="width: 30%;">
+            <h4>Rules</h4>
+            <ul>
+              <li class="large text-muted">No candles</li>
+              <li class="large text-muted">Smoking outside only</li>
+              <li class="large text-muted">General respect and consideration will do the trick</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -121,7 +240,6 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Gallery</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
 
@@ -240,7 +358,6 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Location</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
 
@@ -252,33 +369,58 @@
       </div>
 
       <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-          </span>
+        <div>
           <h4 class="service-heading">Brunswick</h4>
           <p class="text-muted">
             Brunswick is a multicultural suburb 4km from the city centre. It has a vast array of restaurants ranging from vegan to middle-eastern, lots of artist run galleries, hip cafes, live music, even an African jazz bar. Our house has really quick and easy access to Tullamarine Freeway with the advantage of no freeway noise.
           </p>
         </div>
+      </div>
+
+      <h4 class="service-heading">Transport</h4>
+
+      <div class="row">
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Transport</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+
+          <p>Easy walk to:</p>
+          <ul>
+            <li class="text-muted">Launderette (at the end of the street)</li>
+            <li class="text-muted">Grantham St shopping centre</li>
+            <li class="text-muted">Cafes</li>
+            <li class="text-muted">Union Hotel with beer garden and live music</li>
+            <li class="text-muted">Royal Park</li>
+            <li class="text-muted">Brunswick Pool (heated outdoor 50 metre + indoor pool + full gym)</li>
+            <li class="text-muted">RMIT School of Fashion and Textiles</li>
+          </ul>
         </div>
+
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p>Tram #58 (3 mins walk) goes direct to:</p>
+          <ul>
+            <li class="text-muted">Hospital precinct</li>
+            <li class="text-muted">Melbourne University</li>
+            <li class="text-muted">Victoria Market</li>
+            <li class="text-muted">Zoo</li>
+            <li class="text-muted">CBD</li>
+            <li class="text-muted">St Kilda Road</li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <p>Bus #504 (1 min walk):</p>
+          <ul>
+            <li class="text-muted">West to Moonee Ponds</li>
+            <li class="text-muted">East to Clifton Hill</li>
+          </ul>
+
+          <p>Walking and bike paths:</p>
+          <ul>
+            <li class="text-muted">Through Royal Park</li>
+            <li class="text-muted">Along Moonee Ponds Creek</li>
+          </ul>
         </div>
       </div>
+
     </div>
   </section>
 
@@ -288,7 +430,6 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Hosts</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
 
@@ -361,16 +502,16 @@
   <footer class="footer">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <span class="copyright">Website built by
             <a href="appitect.co">Appitect</a>
           </span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <ul class="list-inline social-buttons">
 
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/brunswickhideaway/">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
