--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Brunswick Hideaway</h1>
-            <span class="subheading">Guest house with private garden</span>
+            <span class="subheading">with private courtyard</span>
             <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
@@ -160,6 +160,19 @@
 
         <!-- Information row 1-->
         <div class="d-flex justify-content-between">
+
+          <div style="width: 30%;">
+            <h4>Rules</h4>
+            <ul>
+              <li class="large text-muted">No candles</li>
+              <li class="large text-muted">Smoking outside only</li>
+              <li class="large text-muted">Please turn off the heater when you are not home</li>
+              <li class="large text-muted">When in use, please move kettle and flat grill clear of the microwave shelf</li>
+              <li class="large text-muted">We would be really happy if you sent us a text when you leave</li>
+              <li class="large text-muted">General respect and consideration will do the trick</li>
+            </ul>
+          </div>
+
           <div style="width: 30%;">
             <h4>Amenities</h4>
             <ul>
@@ -186,6 +199,11 @@
             </ul>
           </div>
 
+        </div>
+      </div>
+
+        <!-- Information row 2-->
+        <div class="d-flex justify-content-between">
           <div style="width: 30%;">
             <h4>Kitchen</h4>
             <ul>
@@ -196,11 +214,7 @@
               <li class="large text-muted">Outdoor barbeque</li>
             </ul>
           </div>
-        </div>
-      </div>
 
-        <!-- Information row 2-->
-        <div class="d-flex justify-content-between">
           <div style="width: 30%;">
             <h4>Guest access</h4>
             <ul>
@@ -219,14 +233,6 @@
             </ul>
           </div>
 
-          <div style="width: 30%;">
-            <h4>Rules</h4>
-            <ul>
-              <li class="large text-muted">No candles</li>
-              <li class="large text-muted">Smoking outside only</li>
-              <li class="large text-muted">General respect and consideration will do the trick</li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
@@ -254,7 +260,7 @@
           </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item portfolio-item-90">
           <a class="portfolio-link" data-toggle="modal" href="#galleryModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
