--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
 
   <!-- Contact -->
   <section class="page-section" id="contact">
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -464,9 +465,19 @@
           <h3 class="section-subheading text-muted">If you have any questions or want to make a booking.</h3>
         </div>
       </div>
+
       <div class="row">
         <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
+
+          <form action="https://formspree.io/greta.jean.caruso@gmail.com " method="POST">
+            <input type="text" placeholder="Your Name" name="name">
+            <input type="email" placeholder="Your Email" name="replyto">
+            <input type="tel" placeholder="Your Phone Number" name="phonenumber">
+            <input type="textarea" placeholder="Your Message" name="message">
+            <input type="submit" value="Send">
+          </form>
+
+          <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -494,7 +505,7 @@
                 <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
               </div>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
