about section layout amended

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <title>Brunswick Hideaway</title>
 
+  <link rel="icon"
+      type="image/png"
+      href="./img/favicon/fridakhalo.jpg" />
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -43,11 +47,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">about</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">gallery</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">about</a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#location">location</a>
           </li>
@@ -70,7 +76,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Brunswick Hideaway</h1>
-            <span class="subheading">with private courtyard</span>
+            <span class="subheading">Guesthouse with private courtyard</span>
             <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
@@ -78,168 +84,8 @@
     </div>
   </header>
 
-  <!-- About -->
-  <section class="page-section" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-        </div>
-      </div>
-      <div>
-        <div>
-          <p class="text-muted">
-            Our light-filled two room apartment with private garden is private and peaceful. It is 24 hour accessible, spacious and self-contained.  Though part of our house, it is separated by a double brick wall and has its own entrance. Heating, cooling, internet and a laptop workspace are all included. The #58 tram is a 3 minute walk and we are very close to Melbourne’s famous 181 hectare (446 acre) Royal Park.
-          </p>
-
-          <p class="text-muted mt-2">
-            Recently renovated, the lounge room has full length windows looking out to the private garden, beautiful timber floors and a stocked up bookshelf. The bedroom has wool carpet, a large built-in wardrobe and quality linen. The bathroom and kitchenette were fully renovated in 2019. While we are close to Grantham Street shops and tram line, and have very quick and easy access to the airport, we are in a really quiet spot.
-          </p>
-
-        <!-- Everyone welcome -->
-        <div>
-          <h4>Everyone is welcome</h4>
-            <ul>
-              <li class="large text-muted">Couples visiting adult children or grand children</li>
-              <li class="large text-muted">People working at the hospital precinct</li>
-              <li class="large text-muted">People working or wanting access to St Kilda Rd business district</li>
-              <li class="large text-muted">Holiday makers and tourists looking for easy access to the racecourse, tennis centre or other sporting venues</li>
-              <li class="large text-muted">People visiting to see live theatre</li>
-            </ul>
-        </div>
-        </div>
-
-        <!-- Buttons -->
-        <div class="row text-center mt-5 mb-5">
-          <div class="col-md-2 col-sm-4 col-xs-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-user-friends fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted">2 guests</p>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-couch fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">Living room</p>
-            <p class="text-muted m-0">3.6m x 4m</p>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-bed fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">1 Bedroom (1 Queen)</p>
-            <p class="text-muted m-0">2.7 x 4.1m</p>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-hat-chef fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">Kitchenette</p>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-leaf fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">Private garden</p>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-toilet fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">1 Bathroom</p>
-          </div>
-        </div>
-
-
-        <!-- Information row 1-->
-        <div class="d-flex justify-content-between">
-
-          <div style="width: 30%;">
-            <h4>Rules</h4>
-            <ul>
-              <li class="large text-muted">No candles</li>
-              <li class="large text-muted">Smoking outside only</li>
-              <li class="large text-muted">Please turn off the heater when you are not home</li>
-              <li class="large text-muted">When in use, please move kettle and flat grill clear of the microwave shelf</li>
-              <li class="large text-muted">We would be really happy if you sent us a text when you leave</li>
-              <li class="large text-muted">General respect and consideration will do the trick</li>
-            </ul>
-          </div>
-
-          <div style="width: 30%;">
-            <h4>Amenities</h4>
-            <ul>
-              <li class="large text-muted p-0">Heating and cooling</li>
-              <li class="large text-muted">TV</li>
-              <li class="large text-muted">Internet</li>
-              <li class="large text-muted">Hangers</li>
-              <li class="large text-muted">Hair dryer</li>
-              <li class="large text-muted">Towels, sheets, extra blankets, pillow selection</li>
-              <li class="large text-muted">Bathroom products</li>
-              <li class="large text-muted">Smoke detector</li>
-              <li class="large text-muted">Free street parking</li>
-            </ul>
-          </div>
-
-          <div style="width: 30%;">
-            <h4>Available for loan</h4>
-            <ul>
-              <li class="large text-muted">Picnic gear</li>
-              <li class="large text-muted">Umbrella</li>
-              <li class="large text-muted">Raincoat</li>
-              <li class="large text-muted">Shopping bags</li>
-              <li class="large text-muted">Anything else, just ask</li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-
-        <!-- Information row 2-->
-        <div class="d-flex justify-content-between">
-          <div style="width: 30%;">
-            <h4>Kitchen</h4>
-            <ul>
-              <li class="large text-muted">Microwave, toaster, kettle</li>
-              <li class="large text-muted">Basic cooking gear</li>
-              <li class="large text-muted">Cutlery, crockery, glasses</li>
-              <li class="large text-muted">Refrigerator</li>
-              <li class="large text-muted">Outdoor barbeque</li>
-            </ul>
-          </div>
-
-          <div style="width: 30%;">
-            <h4>Guest access</h4>
-            <ul>
-              <li class="large text-muted">Greta and Tony will greet you if available</li>
-              <li class="large text-muted">24 hour access with lock safe</li>
-              <li class="large text-muted">Step free access</li>
-            </ul>
-          </div>
-
-          <div style="width: 30%;">
-            <h4>Safety features</h4>
-            <ul>
-              <li class="large text-muted">No steps or stairs</li>
-              <li class="large text-muted">Fire extinguisher</li>
-              <li class="large text-muted">Smoke detector</li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Gallery -->
-  <section class="bg-light page-section" id="portfolio">
+  <section class="page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -350,6 +196,191 @@
           </a>
         </div>
 
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section class="bg-light page-section" id="about">
+    <div class="container">
+
+      <div class="d-flex justify-content-around">
+
+      <!-- Buttons -->
+        <div class="mt-5 mb-5">
+          <div class="text-center mb-5">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-user-friends fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted">2 guests</p>
+          </div>
+          <div class="text-center mb-5">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-couch fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">Living room</p>
+            <p class="text-muted m-0">3.6m x 4m</p>
+          </div>
+          <div class="text-center mb-5">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-bed fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">1 Bedroom (1 Queen)</p>
+            <p class="text-muted m-0">2.7 x 4.1m</p>
+          </div>
+          <div class="text-center mb-5">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-hat-chef fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">Kitchenette</p>
+          </div>
+          <div class="text-center mb-5">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-leaf fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">Private garden</p>
+          </div>
+          <div class="text-center mb-5">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-toilet fa-stack-1x fa-inverse"></i>
+            </span>
+            <p class="text-muted m-0">1 Bathroom</p>
+          </div>
+        </div>
+
+        <!-- Text -->
+        <div style="width: 65%">
+          <div class="text-center">
+            <h2 class="section-heading text-uppercase">About</h2>
+          </div>
+
+          <div class="text-justify">
+            <p class="text-muted">
+              Our light-filled two room apartment with private garden a peaceful hideaway. It is 24 hour accessible, spacious and self-contained. It is attached to our house by a double brick wall, and has its own entrance. Heating, cooling, internet and a laptop workspace are all included.
+            </p>
+            <p class="text-muted mt-2">
+              Recently renovated, the lounge room has full length windows looking out to the garden, beautiful timber floors and a stocked up bookshelf. The bedroom has wool carpet, a large built-in wardrobe and quality linen. We are close to Grantham Street shops and tram line, and have very quick and easy access to the airport.
+            </p>
+          </div>
+
+          <div class="mt-5 mb-5 w-100">
+            <h4>Everyone is welcome</h4>
+            <hr>
+            <ul>
+              <li class="large text-muted">Couples visiting adult children or grand children</li>
+              <li class="large text-muted">People working at the hospital precinct</li>
+              <li class="large text-muted">People working or wanting access to St Kilda Rd business district</li>
+              <li class="large text-muted">Holiday makers and tourists looking for easy access to the racecourse, tennis centre or other sporting venues</li>
+              <li class="large text-muted">People visiting to see live theatre</li>
+            </ul>
+          </div>
+
+          <div class="d-flex justify-content-between">
+            <div class="m-2" style="width: 40%">
+              <h4>Amenities</h4>
+              <hr>
+              <ul>
+                <li class="large text-muted p-0">Heating and cooling</li>
+                <li class="large text-muted">TV</li>
+                <li class="large text-muted">Internet</li>
+                <li class="large text-muted">Hangers</li>
+                <li class="large text-muted">Hair dryer</li>
+                <li class="large text-muted">Towels, sheets, extra blankets, pillow selection</li>
+                <li class="large text-muted">Bathroom products</li>
+                <li class="large text-muted">Smoke detector</li>
+                <li class="large text-muted">Free street parking</li>
+              </ul>
+            </div>
+
+            <div class="m-2" style="width: 40%">
+              <h4>Available for loan</h4>
+              <hr>
+              <ul>
+                <li class="large text-muted">Picnic gear</li>
+                <li class="large text-muted">Umbrella</li>
+                <li class="large text-muted">Raincoat</li>
+                <li class="large text-muted">Shopping bags</li>
+                <li class="large text-muted">Anything else, just ask</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-between">
+            <div class="m-2" style="width: 40%">
+              <h4>Kitchenette</h4>
+              <hr>
+              <ul>
+                <li class="large text-muted">Microwave, toaster, kettle</li>
+                <li class="large text-muted">Basic cooking gear</li>
+                <li class="large text-muted">Cutlery, crockery, glasses</li>
+                <li class="large text-muted">Refrigerator</li>
+                <li class="large text-muted">Outdoor barbeque</li>
+              </ul>
+            </div>
+
+            <div class="m-2" style="width: 40%">
+              <h4>Guest access</h4>
+              <hr>
+              <ul>
+                <li class="large text-muted">Greta and Tony will greet you if available</li>
+                <li class="large text-muted">24 hour access with lock safe</li>
+                <li class="large text-muted">Step free access</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-between">
+            <div class="m-2" style="width: 40%">
+              <h4>Safety features</h4>
+              <hr>
+              <ul>
+                <li class="large text-muted">No steps or stairs</li>
+                <li class="large text-muted">Fire extinguisher</li>
+                <li class="large text-muted">Smoke detector</li>
+              </ul>
+            </div>
+
+            <div class="m-2" style="width: 40%">
+              <h4>Rules</h4>
+              <hr>
+              <ul>
+                <li class="large text-muted">No candles</li>
+                <li class="large text-muted">Smoking outside only</li>
+                <li class="large text-muted">Please turn off the heater when you are not home</li>
+                <li class="large text-muted">When in use, please move kettle and flat grill clear of the microwave shelf</li>
+                <li class="large text-muted">We would be really happy if you sent us a text when you leave</li>
+                <li class="large text-muted">General respect and consideration will do the trick</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+        <!-- Everyone welcome -->
+
+        </div>
+
+
+        <!-- Information row 1-->
+        <div class="d-flex justify-content-between">
+
+
+
+        </div>
+      </div>
+
+        <!-- Information row 2-->
+        <div class="d-flex justify-content-between">
+
+        </div>
       </div>
     </div>
   </section>
@@ -469,15 +500,15 @@
       <div class="row">
         <div class="col-lg-12">
 
-          <form action="https://formspree.io/greta.jean.caruso@gmail.com " method="POST">
+<!--           <form action="https://formspree.io/greta.jean.caruso@gmail.com " method="POST">
             <input type="text" placeholder="Your Name" name="name">
             <input type="email" placeholder="Your Email" name="replyto">
             <input type="tel" placeholder="Your Phone Number" name="phonenumber">
             <input type="textarea" placeholder="Your Message" name="message">
             <input type="submit" value="Send">
-          </form>
+          </form> -->
 
-          <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
+          <form id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -505,7 +536,7 @@
                 <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
               </div>
             </div>
-          </form> -->
+          </form>
         </div>
       </div>
     </div>
