contact form style

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       <div class="row">
         <div class="col-lg-12">
 
-<!--           <form action="https://formspree.io/greta.jean.caruso@gmail.com " method="POST">
+<!--           <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST">
             <input type="text" placeholder="Your Name" name="name">
             <input type="email" placeholder="Your Email" name="replyto">
             <input type="tel" placeholder="Your Phone Number" name="phonenumber">
@@ -508,7 +508,8 @@
             <input type="submit" value="Send">
           </form> -->
 
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
+<!--           <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST" id="contactForm" name="sentMessage" novalidate="novalidate"> -->
+          <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST" id="contactForm">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -533,7 +534,7 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" value="Send">Send Message</button>
               </div>
             </div>
           </form>
