--- a/index.html
+++ b/index.html
@@ -500,16 +500,15 @@
       <div class="row">
         <div class="col-lg-12">
 
-<!--           <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST">
+          <form action="https://formspree.io/ocgoodliffe@gmail.com" method="POST" id="contactForm">
             <input type="text" placeholder="Your Name" name="name">
             <input type="email" placeholder="Your Email" name="replyto">
             <input type="tel" placeholder="Your Phone Number" name="phonenumber">
             <input type="textarea" placeholder="Your Message" name="message">
             <input type="submit" value="Send">
-          </form> -->
+          </form>
 
-<!--           <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST" id="contactForm" name="sentMessage" novalidate="novalidate"> -->
-          <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST" id="contactForm">
+          <!-- <form action="https://formspree.io/ocgoodliffe@gmail.com" method="POST" id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -534,10 +533,11 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" value="Send">Send Message</button>
+                <input type="submit" value="Send" class="btn btn-primary btn-xl text-uppercase">
+<!--                 <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" value="Send">Send Message</button> -->
               </div>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
