--- a/index.html
+++ b/index.html
@@ -500,44 +500,33 @@
       <div class="row">
         <div class="col-lg-12">
 
-          <form action="https://formspree.io/ocgoodliffe@gmail.com" method="POST" id="contactForm">
-            <input type="text" placeholder="Your Name" name="name">
-            <input type="email" placeholder="Your Email" name="replyto">
-            <input type="tel" placeholder="Your Phone Number" name="phonenumber">
-            <input type="textarea" placeholder="Your Message" name="message">
-            <input type="submit" value="Send">
-          </form>
-
-          <!-- <form action="https://formspree.io/ocgoodliffe@gmail.com" method="POST" id="contactForm" name="sentMessage" novalidate="novalidate">
+          <form action="https://formspree.io/ocgoodliffe@gmail.com" method="POST">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
+                  <input class="form-control" type="text" name="name" placeholder="Your Name *">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
+                  <input class="form-control" type="email" name="reply to" placeholder="Your Email *">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
+                  <input class="form-control" type="tel" name="phone number" placeholder="Your Phone Number *">
                 </div>
               </div>
+
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
+                  <textarea class="form-control" name="message" id="message" placeholder="Your Message *"></textarea>
                 </div>
               </div>
-              <div class="clearfix"></div>
+
               <div class="col-lg-12 text-center">
-                <div id="success"></div>
                 <input type="submit" value="Send" class="btn btn-primary btn-xl text-uppercase">
-<!--                 <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" value="Send">Send Message</button> -->
               </div>
+
             </div>
-          </form> -->
+          </form>
+
         </div>
       </div>
     </div>
