about heading added

--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
     <div class="container">
 
       <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">About</h2>
+        </div>
+      </div>
+
+      <div class="row">
         <!-- Buttons -->
         <div class="col-lg-3 col-md-3 col-sm-12">
 
