brunswick images spacing, subtitle size, facebook link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Brunswick Hideaway</h1>
-            <span class="subheading">Guesthouse with private courtyard</span>
+            <h3 class="subheading">Guesthouse with private courtyard</h3>
             <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
@@ -343,12 +343,11 @@
             Brunswick is a multicultural suburb 4km from the city centre. It has a vast array of restaurants ranging from vegan to middle-eastern, lots of artist run galleries, hip cafes, live music, even an African jazz bar. Our house has really quick and easy access to Tullamarine Freeway with the advantage of no freeway noise.
           </p>
 
-          <div class="d-flex flex-wrap justify-content-between">
-            <img src="img/brunswick/howler.png" alt="Howler Bar" width="48.5%" class="m-1">
-            <img src="img/brunswick/food.jpeg" alt="Multicultural Food" width="48.5%" class="m-1">
-            <img src="img/brunswick/blakdotgallery.jpeg" alt="Blak Dot Gallery" width="48.5%" class="m-1">
-            <img src="img/brunswick/royalpark.jpg" alt="Royal Park" width="48.5%" class="m-1">
-
+          <div class="row">
+            <img src="img/brunswick/howler.png" alt="Howler Bar" width="48.5%" class="p-1 col-xs-12 col-lg-6">
+            <img src="img/brunswick/food.jpeg" alt="Multicultural Food" width="48.5%" class="p-1 col-xs-12 col-lg-6">
+            <img src="img/brunswick/blakdotgallery.jpeg" alt="Blak Dot Gallery" width="48.5%" class="p-1 col-xs-12 col-lg-6">
+            <img src="img/brunswick/royalpark.jpg" alt="Royal Park" width="48.5%" class="p-1 col-xs-12 col-lg-6">
           </div>
 
         </div>
@@ -357,7 +356,7 @@
 
           <div class="col-lg-12">
 
-            <h6>Easy walk to:</h6>
+            <h6 class='mt-2'>Easy walk to:</h6>
             <hr>
             <ul>
               <li class="text-muted">Launderette (at the end of the street)</li>
@@ -484,27 +483,37 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <span class="copyright">Website built by
-            <a href="appitect.co">Appitect</a>
-          </span>
-        </div>
-        <div class="col-md-6">
-          <ul class="list-inline social-buttons">
+  <!-- Facebook -->
+  <section class="page-section" id="facebook">
 
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+
+          <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/brunswickhideaway/">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
-
           </ul>
-        </div>
 
+          <h3 class="section-heading text-uppercase mt-4">Visit our Facebook page</h3>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-12">
+          <span class="copyright">Website built by
+            <a href="appitect.co">Appitect</a>
+          </span>
+        </div>
       </div>
     </div>
   </footer>
