open in new tab

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       <div class="row">
         <div class="col-lg-12">
 
-          <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST">
+          <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST" target="_blank">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -472,7 +472,7 @@
               </div>
 
               <div class="col-lg-12 text-center">
-                <input type="submit" value="Send" class="btn btn-primary btn-xl text-uppercase">
+                <input type="submit" value="Send" class="btn btn-primary btn-xl text-uppercase" target="_blank">
               </div>
 
             </div>
@@ -492,7 +492,7 @@
 
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/brunswickhideaway/">
+              <a href="https://www.facebook.com/brunswickhideaway/" target="_blank">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
@@ -511,7 +511,7 @@
       <div class="row align-items-center">
         <div class="col-lg-12">
           <span class="copyright">Website built by
-            <a href="appitect.co">Appitect</a>
+            <a href="appitect.co" target="_blank">Appitect</a>
           </span>
         </div>
       </div>
