--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Brunswick Hideaway</h1>
-            <h3 class="subheading">Guesthouse with private courtyard</h3>
+            <h2>Guesthouse with private courtyard</h2>
             <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
@@ -123,15 +123,15 @@
 
         <div class="row">
 
-            <div class="col-lg-4 gallery-item">
+            <div class="col-lg-4 col-sm-12 gallery-item">
               <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg); object-fit: cover">
             </div>
 
-            <div class="col-lg-4 gallery-item">
+            <div class="col-lg-4 col-sm-12 gallery-item">
               <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg); object-fit: cover">
             </div>
 
-            <div class="col-lg-4 gallery-item">
+            <div class="col-lg-4 col-sm-12 gallery-item">
               <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg); object-fit: cover">
             </div>
 
@@ -333,7 +333,7 @@
       </div>
 
 
-      <h4 class="service-heading">Brunswick</h4>
+      <h4 class="service-heading mt-5">Brunswick</h4>
 
       <div class="row text-justify">
 
@@ -484,7 +484,7 @@
   </section>
 
   <!-- Facebook -->
-  <section class="page-section" id="facebook">
+  <section class="bg-light page-section" id="facebook">
 
     <div class="container">
       <div class="row">
