facebook section fixed

--- a/index.html
+++ b/index.html
@@ -483,13 +483,15 @@
   <section class="bg-light page-section" id="facebook">
 
     <div class="container">
+
       <div class="row">
         <div class="col-lg-12 text-center">
 
+
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/brunswickhideaway/" target="_blank">
-                <i class="fab fa-facebook-f"></i>
+              <a href="https://www.facebook.com/brunswickhideaway/" target="_blank" >
+                <i class="fab fa-facebook-f mt-3"></i>
               </a>
             </li>
           </ul>
@@ -502,7 +504,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer">
+<!--   <footer class="footer">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
@@ -512,7 +514,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
