front page font sizes

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <div class="row">
         <div class="col-lg-12 col-xs-12 mx-auto">
           <div class="site-heading">
-            <h1>Brunswick Hideaway</h1>
-            <h2 style='font-weight: 200;'>Guesthouse with private courtyard</h2>
+            <h1 style="font-size: 4rem">Brunswick Hideaway</h1>
+            <h2 style='font-weight: 200; font-size: 2rem'>Guesthouse with private courtyard</h2>
             <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
