rotation and facebook icon

--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
         <div class="row">
 
             <div class="col-lg-4 col-sm-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg); object-fit: cover">
+              <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg) !important; object-fit: cover">
             </div>
 
             <div class="col-lg-4 col-sm-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg); object-fit: cover">
+              <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg) !important; object-fit: cover">
             </div>
 
             <div class="col-lg-4 col-sm-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg); object-fit: cover">
+              <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg) !important; object-fit: cover">
             </div>
 
         </div>
@@ -491,7 +491,7 @@
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/brunswickhideaway/" target="_blank" >
-                <i class="fab fa-facebook-f mt-3"></i>
+                <i class="fab fa-facebook-f mt-3 pt-1"></i>
               </a>
             </li>
           </ul>
